src/main/default/objects/Warehouse__c/Warehouse__c.object-meta.xml
<CustomObject>
    <label>Warehouse</label>
    <nameField>
        <label>Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Ii0000001dLM7EAM_00Ni000000CaazdEAB</fullName>
        <active>true</active>
        <errorMessage>Archived Warehouse won't be available for new Job.</errorMessage>
        <field>Job__c.Warehouse__c</field>
        <filterItems>
            <field>Warehouse__c.IsArchived__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Job_Warehouse</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii0000001dLMLEA2_00Ni000000Cab2SEAR</fullName>
        <active>true</active>
        <field>Ticket__c.Warehouse__c</field>
        <filterItems>
            <field>Warehouse__c.IsArchived__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Ticket_Warehouse</name>
    </namedFilters>
    <pluralLabel>Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>