src/main/default/objects/Warehouse__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <inlineHelpText>First line of the warehouse address.</inlineHelpText>
    <label>Address 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>