src/main/default/objects/Warehouse__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <inlineHelpText>Second line of the warehouse address.</inlineHelpText>
    <label>Address 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>