src/main/default/objects/Warehouse__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <inlineHelpText>City where the warehouse is located.</inlineHelpText>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>