src/main/default/objects/Warehouse__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <inlineHelpText>Fax number for the warehouse.</inlineHelpText>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>