src/main/default/objects/Warehouse__c/fields/Postal_code__c.field-meta.xml
<CustomField>
    <fullName>Postal_code__c</fullName>
    <inlineHelpText>Postal code for the warehouse.</inlineHelpText>
    <label>Postal code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>