src/main/default/objects/Warehouse__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <inlineHelpText>State where the warehouse is located.</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>