src/main/default/objects/Warehouse__c/fields/Warehouse_Name_Unique__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Name_Unique__c</fullName>
    <inlineHelpText>Unique identifier for the warehouse record.</inlineHelpText>
    <label>Warehouse Name Unique</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>