src/main/default/objects/Warehouse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>City__c</columns>
    <columns>Phone__c</columns>
    <columns>Fax__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>